[docs/site] - fixed z-indexing issues

--- a/pluto/src/dropdown/Dropdown.css
+++ b/pluto/src/dropdown/Dropdown.css
@@ -20,6 +20,9 @@
             z-index: calc(var(--pluto-dropdown-z-index, 6) + 1);
         }
     }
+    &:not(.pluto--connected) {
+        width: max-content;
+    }
 }
 
 .pluto-dropdown__bg {
